# gas_ec_studio

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  about_dialog.py  main.py  main_window.py  resources.py  studio.py  theme.py  ui_refresh.py  ui_text.py  version.py
core/: __init__.py  headless_batch_runner.py
docs/: architecture.md  user_guide.md
models/: __init__.py  comparison_models.py  hf_models.py  result_models.py  rp_models.py  spectral_models.py  station_models.py
packaging/: PUBLIC_RC_NOTES.md  RC_README.txt  gas_ec_studio.spec  version_info.txt
scripts/: bootstrap_windows_signing_tools.py  build_windows_rc.py  generate_source_derived_li7700_wms_fixture.py  generate_source_derived_native_binary_fixture.py  generate_source_derived_slt_fixtures.py  generate_source_derived_smartflux_ptp_gps_fixture.py  generate_source_derived_tob1_fixture.py  generate_user_manual.py  run_eddypro_release_gate.py  validate_rc_dpi.py  validate_windows_release.py  windows_signing.py
tests/: __init__.py  conftest.py  test_advanced_parity_v3b.py  test_app_identity_and_about.py  test_app_main_runtime.py  test_ch4_trace_gas_pipeline.py  test_clock_sync_pipeline.py  test_crosswind_correction_pipeline.py  test_daemon_telemetry_runtime.py  test_delivery_package_export.py  test_device_detail_primary_analyzer.py  test_device_detail_workbench_ui.py  test_device_realtime_workbench_ui.py  test_dynamic_canopy_footprint.py  test_ec_core_parity_v1.py  test_ec_fcc_pipeline.py  test_ec_fcc_transfer_components.py  test_ec_processing_page_real_data.py  test_ec_processing_workbench_ui.py  test_ec_rp_analysis.py  test_ec_rp_pipeline.py  test_ec_rp_qc.py  test_ec_rp_qc_matrix.py  test_eddypro_attribution.py  test_eddypro_bridge.py  test_eddypro_capability_matrix.py  test_eddypro_comparator.py  test_eddypro_computation_scope_audit.py  test_eddypro_computation_stress_suite.py  test_eddypro_coverage_audit.py  test_eddypro_fixture_pack.py  test_eddypro_partial_capability_closure.py  test_eddypro_release_gate.py  test_eddypro_source_inventory.py  (+49 more)
(+154 files in other folders)
