[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gas-ec-studio"
version = "0.1.0"
description = "Independent gas analyzer engineering cockpit for acquisition, diagnostics, and EC pipeline integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "pyqtgraph>=0.13",
  "pyserial>=3.5",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
gas-ec-headless = "core.headless_batch_runner:run_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = [
  "app",
  "app.pages",
  "app.widgets",
  "core",
  "core.protocol",
  "core.adapters",
  "core.acquisition",
  "core.storage",
  "core.replay",
  "core.ec_rp",
  "core.ec_fcc",
  "core.exports",
  "core.help",
  "models",
]
